fix(recipes): address query migration review comments
Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>